; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/rtld-elf/rtld-libc/extr_rtld_libc.c___assert.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/rtld-elf/rtld-libc/extr_rtld_libc.c___assert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STDERR_FILENO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"Assertion failed: (%s), file %s, line %d.\0A\00", align 1
@.str.1 = private unnamed_addr constant [56 x i8] c"Assertion failed: (%s), function %s, file %s, line %d.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__assert(i8* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %4
  %12 = load i32, i32* @STDERR_FILENO, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call i32 (i32, i8*, i8*, i8*, ...) @rtld_fdprintf(i32 %12, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i8* %13, i8* %14, i32 %15)
  br label %24

17:                                               ; preds = %4
  %18 = load i32, i32* @STDERR_FILENO, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 (i32, i8*, i8*, i8*, ...) @rtld_fdprintf(i32 %18, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0), i8* %19, i8* %20, i8* %21, i32 %22)
  br label %24

24:                                               ; preds = %17, %11
  %25 = call i32 (...) @abort() #3
  unreachable
}

declare dso_local i32 @rtld_fdprintf(i32, i8*, i8*, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
